--- a/src/pages/Recipes/Recipes.module.css
+++ b/src/pages/Recipes/Recipes.module.css
@@ -161,8 +161,11 @@
 }
 
 .staticFigure img {
+  width: calc(25rem + 200px);
   height: calc(25rem + 200px);
-  object-fit: contain;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+  border-radius: 50%;
   margin-left: 700px;
   margin-top: -100px;
 }
