--- a/src/pages/Reservations/Success/Success.module.css
+++ b/src/pages/Reservations/Success/Success.module.css
@@ -28,7 +28,11 @@
   }
 
 .staticFigure img {
+  width: 40rem;
   height: 40rem;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+  border-radius: 50%;
   padding-left: 100px;
   margin-bottom: -350px;
   margin-top: -30px;
